title change, in _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
-title: Git started w Grantiago
+title: What about Grant?
 description: I used to kayak. I still do, but I used to. 
