--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,9 @@
 title: What about Grant
 email: grant@lrio.com
 description: >- # this means to ignore newlines until "baseurl:"
-jekyll test ::beer:: 
+  Description for your new site here. It will appear in your document head meta (for
+  Google search results) and in your feed.xml site description.
+ 
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: treddinwwater
