--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,7 @@
 title: What about Grant
 email: grant@lrio.com
 description: >- # this means to ignore newlines until "baseurl:"
+  Jekyll Test
   Description for your new site here. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
  
