--- a/_config.yml
+++ b/_config.yml
@@ -18,15 +18,14 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: What about Grant
+title: Advanced Dangerous Projects
 email: grant@lrio.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Jekyll Test
-  Description for your new site here. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  ADP Jekyll Based
+  I used to write. I still do. But I used to write as well.
  
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://grantiago.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://grantiago.github.io" 
 
 twitter_username: treddinwwater
 github_username:  grantiago
