--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,8 @@ github_username:  grantiago
 theme: minima
 plugins:
   - jekyll-feed
-
+disqus:
+    shortname: treddinwater # Here's where you put your unique shortname
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
