--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ github_username:  grantiago
 # Build settings
 theme: minima
 plugins:
-#  - jekyll-feed
+ - jekyll-feed
 # Build settings
 #markdown: kramdown
 
