--- a/_config.yml
+++ b/_config.yml
@@ -1,27 +1,8 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely edit after that. If you find
-# yourself editing this file very often, consider using Jekyll's data files
-# feature for the data you need to update frequently.
-#
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
-#
-# If you need help with YAML syntax, here are some quick references for you: 
-# https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
-# https://learnxinyminutes.com/docs/yaml/
-#
-# Site settings
-# These are used to personalize your new site. If you look in the HTML files,
-# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
-# You can create any custom variable you would like, and they will be accessible
-# in the templates via {{ site.myvariable }}.
 
 title: Advanced Dangerous Projects
 email: grant@lrio.com
 author: grant amaral
-description: >- # this means to ignore newlines until "baseurl:"
+description: > this means to ignore newlines until "baseurl:"
  ADP Jekyll Based
  I used to write. I still do. But I used to write as well.
 baseurl: "" # the subpath of your site, e.g. /blog
@@ -34,21 +15,7 @@ github_username:  grantiago
 theme: minima
 plugins:
  - jekyll-feed
-# Build settings
-#markdown: kramdown
-
-#disqus:
-#
-#shortname: treddinwater # Here's where you put your unique shortname
-# Exclude from processing.
-# The following items will not be processed, by default.
-# Any item listed under the `exclude:` key here will be automatically added to
-# the internal "default list".
-#
-# Excluded items can be processed by explicitly listing the directories or
-# their entries' file path in the `include:` list.
-#
-# exclude:
+ exclude:
 #   - .sass-cache/
 #   - .jekyll-cache/
 #   - gemfiles/
@@ -59,3 +26,4 @@ plugins:
 #   - vendor/cache/
 #   - vendor/gems/
 #   - vendor/ruby/
+
