changed confit.yml file uncommented all exclude at end

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,3 @@
-
 title: Advanced Dangerous Projects
 email: grant@lrio.com
 author: grant amaral
@@ -16,14 +15,14 @@ theme: minima
 plugins:
  - jekyll-feed
  exclude:
-#   - .sass-cache/
-#   - .jekyll-cache/
-#   - gemfiles/
-#   - Gemfile
-#   - Gemfile.lock
-#   - node_modules/
-#   - vendor/bundle/
-#   - vendor/cache/
-#   - vendor/gems/
-#   - vendor/ruby/
+   - .sass-cache/
+   - .jekyll-cache/
+   - gemfiles/
+   - Gemfile
+   - Gemfile.lock
+   - node_modules/
+   - vendor/bundle/
+   - vendor/cache/
+   - vendor/gems/
+   - vendor/ruby/
 
