--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@ email: grant@lrio.com
 author: grant amaral
 description: "ADP Jekyll Based I used to write. I still do. But I used to write as well."
 #baseurl: "" # the subpath of your site, e.g. /blog
-#url: "https://grantiago.github.io" 
+url: "https://grantiago.github.io" 
 
-#twitter_username: treddinwwater
-#github_username:  grantiago
+twitter_username: treddinwwater
+github_username:  grantiago
 
 # Build settings
-#theme: minima
-#plugins:
-# - jekyll-feed
-#exclude: [Gemfile, Gemfile.lock, README.md]
+theme: minima
+plugins:
+ - jekyll-feed
+exclude: [Gemfile, Gemfile.lock]
