added repository  name to config

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,9 @@ title: Grant Amaral
 email: grant@lrio.com
 author: grant amaral
 description: "ADP Jekyll Based I used to write. I still do. But I used to write as well."
-#baseurl: "" # the subpath of your site, e.g. /blog
+# the subpath of your site, e.g. /blog
+# github pages the /repository_name
+baseurl: "/grantiago.github.io"
 url: "https://grantiago.github.io" 
 
 twitter_username: treddinwwater
