--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ author: grant amaral
 description: "ADP Jekyll Based I used to write. I still do. But I used to write as well."
 # the subpath of your site, e.g. /blog
 # github pages the repository_name
-#baseurl: "grantiago.github.io"
+baseurl: "/"
 url: "https://grantiago.github.io" 
 
 twitter_username: treddinwwater
