--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ description: "ADP Jekyll Based I used to write. I still do. But I used to write 
 baseurl: "/"
 url: "https://grantiago.github.io" 
 
-twitter_username: treddinwwater
+twitter_username: treddinwater
 github_username:  grantiago
 
 # Build settings
